<resources>
    <string name="app_name">Aurtistic Project</string>
    <string name="first_slide_title">Know about Autism</string>
    <string name="second_slide_title">Be a part of Aurtistic Stories</string>
    <string name="third_slide_title">Discover educative content</string>
    <string name="fourth_slide_title">Take daily quizzes</string>
    <string name="bhavana_kaushik">Ms. Bhavana Kaushik</string>
    <string name="karma_dulal">Ms. Karma Lhamo Dulal</string>
    <string name="bhavana_kaushik_designation">(Project Mentor, Aurtistic)</string>
    <string name="karma_dulal_designation">(Journalism Student, UNICEF Volunteer)</string>
    <string name="bhavana_kaushik_description">"Working with Team Aurtistic as a mentor is an honour for me. Team grouped up together quickly and collected the authentic data from various NGOs and counselors who deals with Autistic people.  Application is designed in very user-friendly manner keeping in mind the capabilities of person with ASD and will open the doors for people associated with ASD child and adult as a parents and caretakers. This is surely a great initiative and my best wishes are with the Team Aurtistic."</string>
    <string name="karma_dulal_desciption">Reviews by Karma Mam</string>
    <string name="first_slide_desc">Know the basics about Autism, its symptoms and therapies. Be an active member in changing the society that still regards this as a taboo.</string>
    <string name="second_slide_desc">Be a part of the Aurtistic Community and post stories about your own struggle. Also, read the stories put up by various people. </string>
    <string name="third_slide_desc">We certainly believe that Autism is beautiful. Discover amazing educative content for people with ASD. </string>
    <string name="fourth_slide_desc">With the help of daily quizzes, get the chance to improve your cognitive abilities and verbal command.</string>
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
    <string name="logo_name">AURTISTIC</string>
    <string name="look_around">Look Around Yourself</string>
    <string name="autism_is_beautiful">Autism is beautiful</string>
    <string name="help_yourself">Help Yourself</string>
    <string name="aurtistic_stories">Aurtistic Stories</string>
    <string name="work_for_aurtistic">Work for Aurtistic</string>
    <string name="our_work">Our Work</string>
    <string name="our_work_desc">Aurtistic has a clear aim of reducing the existing taboo in the society regarding ASD and social inferiority</string>
    <string name="people_reviews">Reviews</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>
    <string name="slogan_name">ENTER INTO THE WORLD OF AURTISTIC</string>
    <string name="expand_all">Expand All</string>
    <string name="heading">Welcome to Aurtistic!</string>
    <string name="tagline">Where Art meets Autism</string>
    <string name="signup">SIGNUP</string>
    <string name="work">HOW DOES AURTISTIC WORK?</string>
    <string name="state1">Andhra Pradesh</string>
    <string name="state2">Arunachal Pradesh</string>
    <string name="state3">Assam</string>
    <string name="state4">Bihar</string>
    <string name="state5">Chattisgarh</string>
    <string name="state6">Goa</string>
    <string name="state7">Gujarat</string>
    <string name="state8">Haryana</string>
    <string name="state9">Himachal Pradesh</string>
    <string name="state10">Jharkhand</string>
    <string name="state11">Karnataka</string>
    <string name="state12">Kerala</string>
    <string name="state13">Madhya Pradesh</string>
    <string name="state14">Maharashtra</string>
    <string name="state15">Manipur</string>
    <string name="state16">Meghalaya</string>
    <string name="state17">Mizoram</string>
    <string name="state18">Nagaland</string>
    <string name="state19">NCT of Delhi</string>
    <string name="state20">Odisha</string>
    <string name="state21">Punjab</string>
    <string name="state22">Rajasthan</string>
    <string name="state23">Sikkim</string>
    <string name="state24">Tamil Nadu</string>
    <string name="state25">Telangana</string>
    <string name="state26">Tripura</string>
    <string name="state27">Uttarakhand</string>
    <string name="state28">Uttar Pradesh</string>
    <string name="state29">West Bengal</string>
    <string name="school1">Prabhata Sindhuri Special School</string>
    <string name="school2">Autism Research &amp; Multidisceplinary School</string>
    <string name="school3">Kids Special Education</string>
    <string name="school4">Aasha Jyothi Welfare Association For Disabled</string>
    <string name="school5">Arunodaya Special School</string>
    <string name="school6">Sparsh Special School</string>
    <string name="school_assam1">Hope Neuro-developmental Institute And Autism Centre</string>
    <string name="school_assam2">Emmanuel\'s Early Intervention</string>
    <string name="school_assam3">Dew Drops Child Health Care</string>
    <string name="school_assam4">Society for Health &amp; Educational Development</string>
    <string name="school_bihar1">Utkarsh Autism Centre</string>
    <string name="school_bihar2">Special School For Autism, CP, MR, MD, ADHD , Deaf &amp; Blind</string>
    <string name="school_bihar3">ARUNIM, A Unit Of Interactive Autism Centre</string>
    <string name="school_bihar4">Mainstream For Autism &amp; Special Care Foundation</string>
    <string name="school_bihar5">SAMARPAN Special School</string>
    <string name="school_bihar6">A.K. Autism Centre</string>
    <string name="school_bihar7">CHILD CONCERN Special School</string>
    <string name="school_bihar8">Mainstream School For Autism And Special Care Foundation</string>
    <string name="school_bihar9">Autism Care Centre - SAHYOG</string>
    <string name="school_bihar10">Autism Resource Centre</string>
    <string name="school_bihar11">Blue Light Autism School</string>
    <string name="school_bihar12">Learning Disabled Education Centre</string>
    <string name="school_chattisgarh1">Dew Drops Child Health Care- ABA THERAPY</string>
    <string name="school_chattisgarh2">Special Educator &amp; Therapy for Autism/CP/MR/ID/Special Child</string>
    <string name="school_goa1">St. Xavier\'s Academy (School for Special Children)</string>
    <string name="school_goa2">Jyothi School For Autism</string>
    <string name="school_goa3">The Owl House - Autism Centre Goa</string>
    <string name="school_goa4">Daddy\'s Home Special School</string>
    <string name="school_gujarat1">Disha Special School &amp; Autism Centre</string>
    <string name="school_gujarat2">ANOORA - Learning Center For Special Kids</string>
    <string name="school_gujarat3">Sai Residential School For Mentally Challenged</string>
    <string name="school_gujarat4">Krupp Industries Educational Center</string>
    <string name="school_gujarat5">Dew Drops Child Health Care - ABA THERAPY</string>
    <string name="school_gujarat6">Kalrav Special School</string>
    <string name="school_gujarat7">Pearl Special Needs Foundation</string>
    <string name="school_gujarat8">New Way Special School</string>
    <string name="school_gujarat9">Samvedna Learning Centre For Special Children</string>
    <string name="school_gujarat10">Sree Nandan School</string>
    <string name="school_gujarat11">Shri K.G. Vidhyalay</string>
    <string name="school_gujarat12">Dew Drops Child HealthCare - Autism</string>
    <string name="school_haryana1">Autism Centre For Excellence</string>
    <string name="school_haryana2">Learning Skills ABA Academy For Autism &amp; Special Needs</string>
    <string name="school_haryana3">Urja School For Special Needs Children</string>
    <string name="school_haryana4">Star Special School For Autism Children Sirsa</string>
    <string name="school_haryana5">National Autism Intervention Research Center</string>
    <string name="school_haryana6">ANANDA By Action For Autism</string>
    <string name="school_haryana7">Umeed Foundation</string>
    <string name="school_haryana8">Divya Special School</string>
    <string name="school_haryana9">Dew Drops Learning Solutions</string>
    <string name="school_haryana10">NAIRC - National Autism Intervention Research Center</string>
    <string name="school_hp1">Sakar Special School</string>
    <string name="school_hp2">Sakar Society For Differently Abled People</string>
    <string name="school_jharkhand1">Child Concern - Autism, CP, ID, ADHD, Hearing &amp; Blind Special Education Centre</string>
    <string name="school_jharkhand2">Santhal Special School</string>
    <string name="school_jharkhand3">Deepshikha Institute For Child Development And Mental</string>
    <string name="school_jharkhand4">Deoghar Special School, Sparsh</string>
    <string name="school_jharkhand5">Pradip Centre For Autism Management</string>
    <string name="school_jharkhand6">Jeevan Jyoti School For Special Children</string>
    <string name="school100">Perseverance Autism School</string>
    <string name="school101">Arivu Early Intervention Center</string>
    <string name="school102">Sambhavam Center for Autism</string>
    <string name="school103">Be Change Centre for Autism</string>
    <string name="school104">Early Autism Services</string>
    <string name="school105">Colours Centre for Learning - Autism</string>
    <string name="school106">CADRRE -The Autism School</string>
    <string name="school107">Lisa School of Autism</string>
    <string name="school108">Heal AUTISM Centre</string>
    <string name="school109">Snehanilayam Special School</string>
    <string name="school110">Autism Sisu Kshema Kendram</string>
    <string name="school111">Mom Belief Balkrishna</string>
    <string name="school112">Parth Development Society</string>
    <string name="school135">Manovikas Special Scool</string>
    <string name="school136">Nav Jyoti Special School</string>
    <string name="school113"> DAWN Autism School</string>
    <string name="school114">Prasanna Autism Centre</string>
    <string name="school115">Saiyam Autism Center</string>
    <string name="school116">Aarambh Autism Center</string>
    <string name="school_rajasthan1">Sambhav School for Autism &amp; Multiple Disability</string>
    <string name="school_rajasthan2">Approach Autism Society</string>
    <string name="school_rajasthan3">Umang School</string>
    <string name="school_rajasthan4">Jagrati Special School</string>
    <string name="school_rajasthan5">Dew Drops Child Health Care-ABA THERAPY</string>
    <string name="school_rajasthan6">Madarsa Roohi Children Happy School</string>
    <string name="school_rajasthan7">Ahan Foundation</string>
    <string name="school_rajasthan8">Milestone Special School</string>
    <string name="school_rajasthan9">Pehchaan Sansthan</string>
    <string name="school_rajasthan10">SNM Rehabilitation &amp; Autism Research Institute</string>
    <string name="school_rajasthan11">ShreeNirmal Vivek Special School, Hostel &amp; VTC</string>
    <string name="school_rajasthan12">Asha Seva Sansthan (Asha Special School Chirawa)</string>
    <string name="school_rajasthan13">Lakshay Special Education School Jaipur</string>
    <string name="school_rajasthan14">Dr Puja Jain | child Doctor | Vaccination Newborn care Autism</string>
    <string name="home">HOME</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="section_1">WHAT IS ASD?</string>
    <string name="section_2">AUTISM IS BEAUTIFUL</string>
    <string name="section_3">EFFORTS OF AURTISTIC</string>
    <string name="section_4">AURTISTIC STORIES</string>
    <string name="section_5">STUDY TIME</string>
    <string name="section_6">QUIZ TIME</string>
    <string name="login">LOGIN WITH GOOGLE</string>
    <string name="profile">PROFILE</string>
</resources>