<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group

        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon_modified"
            android:title="@string/home" />


<!--        <item-->
<!--            android:id="@+id/nav_search"-->
<!--            android:icon="@drawable/search_icon_modified"-->
<!--            android:title="@string/search" />-->

        <item
            android:id="@+id/nav_all_categories"
            android:icon="@drawable/all_categories_icon"
            android:title="@string/all_categories" />


    </group>

    <item android:title="Profile">

        <menu>

            <group

                android:checkableBehavior="single">

                <item
                    android:id="@+id/login"
                    android:icon="@drawable/login_icon"
                    android:title="@string/login" />

                <item
                    android:id="@+id/profile"
                    android:icon="@drawable/profile_icon"
                    android:title="@string/profile" />

<!--                <item-->
<!--                    android:id="@+id/logout"-->
<!--                    android:icon="@drawable/logout_icon"-->
<!--                    android:title="@string/logout" />-->


            </group>


        </menu>

    </item>

    <item android:title="Categories">

        <menu>

            <group

                android:checkableBehavior="single">

                <item
                    android:id="@+id/section_1"
                    android:icon="@drawable/section_1"
                    android:title="@string/section_1" />

                <item
                    android:id="@+id/section_2"
                    android:icon="@drawable/section_2"
                    android:title="@string/section_2" />

                <item
                    android:id="@+id/section_3"
                    android:icon="@drawable/section_3"
                    android:title="@string/section_3" />

                <item
                    android:id="@+id/section_4"
                    android:icon="@drawable/section_4"
                    android:title="@string/section_4" />

                <item
                    android:id="@+id/section_5"
                    android:icon="@drawable/section_5"
                    android:title="@string/section_5" />

                <item
                    android:id="@+id/section_6"
                    android:icon="@drawable/section_6"
                    android:title="@string/section_6" />


            </group>


        </menu>

    </item>


</menu>