<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.LookAroundYourself"
    android:background="#d3d3d3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="look around yourself"
            android:textSize="26sp"
            android:fontFamily="@font/sf_black"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:padding="20dp"
            android:gravity="center_horizontal" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_gravity="right"
            android:layout_marginRight="50dp"
            android:src="@drawable/ic_indian_flag"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/sf_black"
            android:gravity="center_horizontal"
            android:layout_marginTop="-65dp"
            android:padding="20dp"
            android:text="Choose your state"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state1"
            android:onClick="call_andhra"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#FF9933"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state2"
            android:onClick="call_arunachal"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#ffffff"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state3"
            android:onClick="call_assam"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#138808"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state4"
            android:onClick="call_bihar"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#FF9933"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state5"
            android:onClick="call_chattisgarh"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#ffffff"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state6"
            android:onClick="call_goa"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#138808"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state7"
            android:onClick="call_gujarat"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#FF9933"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state8"
            android:onClick="call_haryana"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#ffffff"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state9"
            android:onClick="call_himachal"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#138808"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state10"
            android:onClick="call_jharkhand"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#FF9933"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state11"
            android:onClick="callUsername1"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#ffffff"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state12"
            android:onClick="callUsername1"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#138808"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state13"
            android:onClick="callUsername1"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#FF9933"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state14"
            android:onClick="callUsername1"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#ffffff"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state15"
            android:onClick="callUsername1"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#138808"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state16"
            android:onClick="callUsername1"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#FF9933"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state17"
            android:onClick="callUsername1"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#ffffff"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state18"
            android:onClick="callUsername1"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#138808"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state19"
            android:onClick="callUsername1"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#FF9933"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state20"
            android:onClick="callUsername1"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#ffffff"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state21"
            android:onClick="callUsername1"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#138808"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state22"
            android:onClick="call_rajasthan"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#FF9933"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state23"
            android:onClick="call_sikkim"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#ffffff"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state24"
            android:onClick="call_tamilnadu"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#138808"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state25"
            android:onClick="call_telangana"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#FF9933"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state26"
            android:onClick="call_tripura"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#ffffff"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state27"
            android:onClick="call_uttarakhand"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#138808"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state28"
            android:onClick="call_uttarpradesh"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#FF9933"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state29"
            android:onClick="call_westbengal"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#ffffff"/>



    </LinearLayout>

</ScrollView>